--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-sass",
-  "version": "4.5.3",
+  "version": "4.5.3-icedream.1",
   "libsass": "3.5.0.beta.3",
   "description": "Wrapper around libsass",
   "license": "MIT",
